# these

.github/workflows/: haskell-ci.yml
semialign-indexed/: CHANGELOG.md  semialign-indexed.cabal
semialign-indexed/src/Data/Semialign/: Indexed.hs
semialign-optics/: CHANGELOG.md  semialign-optics.cabal
these/: these.cabal
these-tests/: these-tests.cabal
these-tests/test/Tests/: SemialignWithIndex.hs
