cabal-version:      1.22
name:               semialign-optics
version:            1.2
synopsis:           SemialignWithIndex, i.e. izipWith and ialignWith
homepage:           https://github.com/isomorphism/these
license:            BSD3
license-file:       LICENSE
author:             C. McCann, Oleg Grenrus
maintainer:         Oleg Grenrus <oleg.grenrus@iki.fi>
category:           Data, These
build-type:         Simple
extra-source-files: CHANGELOG.md
description:
  This package is deprecated.
  It simply re-exports [semialign-indexed](https://hackage.haskell.org/package/semialign-indexed)
  (and adds a @optics-core@ constraint).

tested-with:
    GHC ==8.2.2 || ==8.4.4 || ==8.6.5 || ==8.8.3 || ==8.10.1
  , GHCJS ==8.4

source-repository head
  type:     git
  location: https://github.com/isomorphism/these.git

library
  default-language:   Haskell2010
  ghc-options:        -Wall
  reexported-modules: Data.Semialign.Indexed

  build-depends:      base >=4.5.1.0 && <4.15
  build-depends:      semialign-indexed >=1.2 && <1.2.1

  -- other dependencies
  -- TODO: move to optics-core 0.4
  build-depends:      optics-core >=0.3 && <0.5
